<resources>
    <string name="app_name">E-commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_cart">Cart</string>
    <string name="menu_item_sort">Sort products</string>


    <string name="product_category_electronics">electronics</string>
    <string name="product_category_jewellery">jewelery</string>
    <string name="product_category_men_clothing">men\'s clothing</string>
    <string name="product_category_women_clothing">women\'s clothing</string>

    <string name="warning_no_products_selected_categories">No available products from the selected categories</string>
    <string name="menu_item_search">Search for products</string>
    <string name="products">Products</string>

    <string name="warning_no_results_for_query">No results for \"%1$s\"</string>

    <string name="favorites_empty_list_title">No favorites yet</string>
    <string name="favorites_empty_list_description">Add products to favorites and we will notify you when they are on sale. It\'s that easy!</string>

    <string name="home_product_categories">Categories</string>
    <string name="home_claim_voucher">Claim voucher</string>
    <string name="home_discount_description">Up to 60% Off</string>

    <string name="cart_browse_products">Browse products</string>
    <string name="cart_empty_list_title">No products in your cart</string>
    <string name="cart_empty_list_description"> Discover the incredible deals and discounts that are waiting for you!</string>

    <string name="profile_not_logged_in_title">You\'re not logged in</string>
    <string name="profile_not_logged_in_description">Log in or create an account to enjoy the full benefits of the application</string>
    <string name="profile_log_in">Log in</string>
    <string name="profile_sign_in">Sign in</string>

    <string name="content_description_favorites_list">favorites list</string>
    <string name="content_description_empty_cart">empty cart</string>
    <string name="content_description_user_not_logged">user not logged in</string>
</resources>