<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.e_commerce.HomeFragment"
        android:label="@string/menu_item_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.e_commerce.CartFragment"
        android:label="@string/menu_item_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.e_commerce.FavoritesFragment"
        android:label="@string/menu_item_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.e_commerce.ProfileFragment"
        android:label="@string/menu_item_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>